HelloUltraviolet/Fixtures/AcceptedProjects/StaticLibrary/Source/Library.uv
//! Accepted project fixture for a static library assembly.

public procedure staticLibraryValue() -> i32 {
    return 42
}
